Added js for doggy years calculation v1.0

--- a/Expressions_worksheet/index.html
+++ b/Expressions_worksheet/index.html
@@ -3,7 +3,7 @@
     <title>
         Expression Worksheet
     </title>
-    <script src="index.js"></script>
+    <script src="doggyYears.js"></script>
 </head>
 <body>
 
