Updated index.html title line, updated doggyYears.js to show both console and alert results. Created index2.html for Slice of Pie Part I.

--- a/Expressions_worksheet/index.html
+++ b/Expressions_worksheet/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title>
-        Expression Worksheet
+        Doggy Years
     </title>
     <script src="doggyYears.js"></script>
 </head>
