Added slicePartI.js, corrected index2.html to pull the script correctly.

--- a/Expressions_worksheet/index2.html
+++ b/Expressions_worksheet/index2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Slice of Pie, Part I</title>
-    <script scr="slicePartI.js">
+    <script src="slicePartI.js">
     </script>
 </head>
 <body>
