Created shoppingBill.js and tested.

--- a/Expressions_worksheet/index4.html
+++ b/Expressions_worksheet/index4.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <title>Average Shopping Bill</title>
-    <script src="shoppingBill.js"></script>
+    <script src="shoppingBill.js">
+    </script>
 </head>
 <body>
 
