Updated file names and reference from index.html

--- a/Expressions_Wacky/index.html
+++ b/Expressions_Wacky/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Mad Lib</title>
-    <script src="madLib.js"></script>
+    <script src="numberGame.js"></script>
 </head>
 <body>
 
