Finished updating html file to have correct title and js reference.

--- a/Expressions_Wacky/index.html
+++ b/Expressions_Wacky/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Mad Lib</title>
+    <title>Number Game</title>
     <script src="numberGame.js"></script>
 </head>
 <body>
