HTML file was not referencing script correctly.  Corrected and updated.

--- a/Expressions_Wacky/index.html
+++ b/Expressions_Wacky/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Number Game</title>
-    <script src="numberGame.js"></script>
+    <script src="js/numberGame.js"></script>
 </head>
 <body>
 
