Corrected path reference on index file to correctly fine js file.

--- a/Functions_worksheet/index.html
+++ b/Functions_worksheet/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Functions Worksheet</title>
-    <script src="circumCircle.js"></script>
+    <script src="js/circumCircle.js"></script>
 </head>
 <body>
 
