Updated Title on html page to say Guess Your Age

--- a/Functions_Wacky/index.html
+++ b/Functions_Wacky/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Another Number Game</title>
+    <title>Guess Your Age</title>
     <script src="js/numberGame.js"></script>
 </head>
 <body>
